# segment-play

./: README.md  pyproject.toml  pytest.ini  requirements.txt
src/: background.py  scenario_director.py  settings.py
src/example/: basic_hide.py  basic_pose.py  camera_test.py  camera_test_producer.py  static_box.py
src/frame/: camera.py  clean.py  producer.py  shared.py  show.py
src/masking/: frame_modification.py  mask.py  producer.py
src/ocsort/: kalmanfilter.py
src/pipeline/: data.py  manager.py  producer.py  stats.py
src/pose/: analyze.py  pose.py  producer.py
src/segmentation/: base.py  mobile_sam.py  producer.py  sam.py
src/tracking/: producer.py  tracking.py
src/util/: logging.py  visualize.py
tests/: .coveragerc  .env.sample  ai_tester.py  conftest.py  test_background.py  test_settings.py
tests/frame/: test_camera.py  test_clean.py  test_frame_producer.py  test_shared.py  test_show.py
tests/masking/: test_frame_modification.py  test_mask.py  test_masking_producer.py
tests/performance/: measure_mask_times.py
tests/pipeline/: test_data.py  test_manager.py  test_pipeline_producer.py  test_pipeline_stats.py
tests/pose/: test_analyze.py  test_pose.py  test_pose_producer.py
tests/segmentation/: test_base.py  test_mobile_sam.py  test_sam.py  test_segmentation_producer.py
tests/tracking/: test_tracking.py  test_tracking_producer.py
tests/util/: test_image.py  test_logging.py  test_visualize.py
